# Odyssey

./: .gitignore  404.html  README.md  index.html  manage.py  mkdocs.yaml  pyproject.toml  setup.sh
.github/workflows/: build.yaml  deploy_documentation.yaml
API/Usage & Documentation/: index.html
Database/Structure/: index.html
Development Setup Guide/Database Setup/: index.html
Development Setup Guide/Making Migrations & Adding Seed Data/: index.html
Development Setup Guide/Python Environment Setup/: index.html
Development Setup Guide/Running Server & Creating an Admin Account/: index.html
Odyssey/: api_common.py  asgi.py  settings.py  urls.py  wsgi.py
accounts/: serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_delete_customuser.py
api/usage/: index.html
api_docs/usage/: index.html
database/schema/: index.html
development_guide/database_setup/: index.html
development_guide/migrations/: index.html
development_guide/python_setup/: index.html
development_guide/running_first_time/: index.html
docs/: .$database_structure.drawio.bkp  .pages  index.md
docs/API/: Usage & Documentation.md
docs/Database/: Structure.md
hardware/: admin.py  models.py  serializers.py  urls.py  views.py
img/: database_structure.drawio
odyssey_production/: admin.py  apps.py  models.py
production/: admin.py  models.py  serializers.py  urls.py  views.py
search/: search_index.json
testing/: admin.py  models.py  serializers.py  urls.py  views.py
values_and_units/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+63 files in other folders)
